--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux": "^3.6.0",
+    "@types/redux-persist": "^4.3.1",
     "@types/redux-thunk": "^2.1.0",
     "history": "^5.3.0",
     "react": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
